user adding works properly (dto required)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:postgresql://195.150.230.210:5434/2019_plesniarski_dawid
+spring.datasource.username=2019_plesniarski_dawid
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
